[tool.poetry]
name = "pdf-merger"
version = "0.1.0"
description = "simple pdf merger based on PyPDF2"
authors = ["shutelmann"]
readme = "README.md"
packages = [{include = "pdf_merger"}]

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
